--- a/index.html
+++ b/index.html
@@ -145,6 +145,34 @@
                 </li>
             </ol>
         </section>
+        <footer class="Footer">
+            <div class="l-row l-column">
+                <div class="Footer__head">
+                    <a href="./" class="logo">Site Name</a>
+                    <ul class="Menu Menu__sub">
+                        <li><a class="Menu__item" href="#">Services</a></li>
+                        <li><a class="Menu__item" href="#">Work</a></li>
+                        <li><a class="Menu__item" href="#">About us</a></li>
+                        <li><a class="Menu__item" href="#">Blog</a></li>
+                        <li><a class="Menu__item" href="#">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="Footer__body">
+                    <p>Copyright information goes down here</p>
+                    <p><a href="#">Legal Notice</a></p>
+                    <p><a href="#">Privacy policy</a></p>
+                </div>
+                <ul class="Footer__foot">
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">YouTube</a></li>
+                    <li><a href="#">Twitter</a></li>
+                    <li><a href="#">LinkedIn</a></li>
+                    <li><a href="#">Flickr</a></li>
+                    <li><a href="#">Instagram</a></li>
+                    <li><a href="#">Yelp</a></li>
+                </ul>
+            </div>
+        </footer>
     </div>
     <script src="./src/js/lib/flipsnap.js"></script>
     <script src="./src/js/lib/lodash.min.js"></script>
